--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <title>Dashboard</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript></noscript>
     <div id="root"></div>
   </body>
 </html>
